--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "BotTokenHere", 
-  "prefix": "PrefixHere",
+  "token": "MTE5NTk1MDU3MTQ2Nzg0OTczOA.GvLN5b.PsUyfIRyQsso0sJja5RgqK2923v-7UtBBdpVlA", 
+  "prefix": "!",
   "everyoneMention": false,
   "copyright": "GiveawayBot™ v3 By ZeroSync",
   "hostedBy": true
